--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "mern-estate",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -17,5 +16,9 @@
     "express": "^4.18.2",
     "mongoose": "^8.1.1",
     "nodemon": "^3.0.3"
-  }
+  },
+  "devDependencies": {
+    "vite": "^5.0.12"
+  },
+  "description": ""
 }
